CHANGE LOG

version 0.5.3
- fixed time parse error (bug #1889477)
- renamed math.h to gmath.h
- excluded malloc.h header

version 0.5.2
- fixed CRC error (bug #1833200)

version 0.5.1
- fixed elevation value type (bug #1832486)
- fixed parsing of GPRMC - nmea_GPRMC2info

version 0.5.0
- added nmea_distance_ellipsoid, nmea_move_horz_ellipsoid in math.h and sample (Thanks Thomas1970)
- fixed makefiles (Thanks for Sereg@ and Thomas1970)
- fixed inline functions in math.h

version 0.4.4
- fixed makefiles (Thanks for Sereg@ and Thomas1970)

version 0.4.3
- fixed bugs #1805550, #1780086, #1778485
- fixed parse VTG packet