@@ -1,9 +1,10 @@
 #include <nmea/nmea.h>
-#include <string.h>
 
+#include <string.h>
 #include <stdio.h>
+
 #ifdef NMEA_WIN
-#include <io.h>
+#   include <io.h>
 #endif
 
 void trace(const char *str, int str_size)
